[project]
name = "templatepython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "ipykernel>=7.1.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
exclude = ["node_modules", ".venv", "venv", "__pypackages__"]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "UP007"]
fixable = ["I", "B", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
strict_optional = true
